<resources>
    <string name="app_name">AVA</string>
    <string name="name">نام</string>
    <string name="family">نام خانوادگی</string>
    <string name="stno">شماره دانشجویی</string>
    <string name="national_id">کد ملی</string>
    <string name="major">رشته تحصیلی</string>
    <string name="entry_year">سال ورود</string>
    <string name="average">معدل کل</string>
    <string name="register"><u>ثبت نام</u></string>
    <string name="enter">ورود</string>
    <string name="stno_sign_up">شماره دانشجویی</string>
    <string name="national_id_sign_up">کد ملی</string>
    <string name="entry_year_sign_up">سال ورود به عنوان مثال ۱۳۹۷</string>
    <string name="average_sign_up">معدل کل</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="saturday_title_text">شنبه</string>
    <string name="_7_30_9">7:30 - 9</string>
    <string name="_9_10_30">9 - 10:30</string>
    <string name="_10_30_12">10:30 - 12</string>
    <string name="_13_30_15">13:30 - 15</string>
    <string name="_15_30_17">15:30 - 17</string>
    <string name="sunday_title_text">یکشنبه</string>
    <string name="monday_title_text">دوشنبه</string>
    <string name="tuesday_title_text">سه شنبه</string>
    <string name="wednesday_title_text">چهار شنبه</string>
    <string name="you_already_register">شما قبلا ثبت برنامه کرده اید برای جایگزینی از گزینه ارسال جایگزین استفاده کنید</string>
    <string name="register_successfully">این برنامه با موفقیت برای شما ثبت شد</string>
    <string name="planIsNotFound">شما چنین برنامه ای ندارید</string>
    <string name="updateRegSuccessfully">برنامه جدید با موفقیت برای شما ثبت شد</string>
    <string name="alreadyRegThisPlan">شما قبلا این برنامه را ثبت کرده اید</string>
</resources>
