<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <ImageView
        android:id="@+id/sign_up_back"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true">
        <LinearLayout
            android:id="@+id/sign_up_widget_linear_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|top"
            android:background="@drawable/widget_layout"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textColor="#8b1716"
                android:layout_marginTop="10dp"
                android:text="فیلد های ستاره دار اجباری می باشند."/>
            <EditText
                android:id="@+id/sign_up_name"
                android:layout_width="717px"
                android:layout_height="135px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_container"
                android:gravity="center_vertical|start"
                android:hint="@string/name"
                android:inputType="text"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp" />
            <EditText
                android:id="@+id/sign_up_family"
                android:layout_width="717px"
                android:layout_height="135px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_container"
                android:gravity="center_vertical|start"
                android:hint="@string/family"
                android:inputType="text"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp" />
            <EditText
                android:id="@+id/sign_up_stno"
                android:layout_width="717px"
                android:layout_height="135px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_container"
                android:gravity="center_vertical|start"
                android:hint="@string/stno_sign_up"
                android:inputType="number"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp" />
            <EditText
                android:id="@+id/sign_up_national_id"
                android:layout_width="717px"
                android:layout_height="135px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_container"
                android:gravity="center_vertical|start"
                android:hint="@string/national_id_sign_up"
                android:inputType="numberPassword"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp" />
            <EditText
                android:id="@+id/sign_up_major"
                android:layout_width="717px"
                android:layout_height="135px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_container"
                android:gravity="center_vertical|start"
                android:hint="@string/major"
                android:inputType="text"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp" />
            <EditText
                android:id="@+id/sign_up_entry_year"
                android:layout_width="717px"
                android:layout_height="135px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_container"
                android:gravity="center_vertical|start"
                android:hint="@string/entry_year_sign_up"
                android:inputType="number"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp" />
            <EditText
                android:id="@+id/sign_up_average"
                android:layout_width="717px"
                android:layout_height="135px"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_container"
                android:gravity="center_vertical|start"
                android:hint="@string/average_sign_up"
                android:inputType="text"
                android:paddingEnd="20dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingStart="20dp" />
            <Button
                android:id="@+id/register_sign_up"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/register_btn"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/register"
                android:textSize="20sp"
                android:textColor="@color/white"
                />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>